# wildlife-trade-intelligence

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/outputs/: trade_routes_map.html
notebooks/: 01_exploration.ipynb  wtie_exploration.ipynb
outputs/: trade_routes_map.html
src/: ingest.py  main.py  mock.py
src/wtie/: definitions.py  io.py
src/wtie/defs/: __init__.py  assets.py
src/wtie/graph/: model.py
src/wtie/summary/: tables.py
src/wtie/viz/: map_routes.py
tests/: test_assets.py  test_ingest.py  test_mock.py  test_model.py  test_placeholder.py
