[project]
name = "wildlife-trade-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.2",
    "dagster-webserver>=1.11.2",
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "pandera>=0.25.0",
    "pyarrow>=21.0.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
[tool.dagster]
module_name = "wtie.definitions"
attribute = "defs"
working_directory = "src"
[tool.pytest.ini_options]
pythonpath = ["src"]
